# anymotion-examples

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
notebooks/: 描画ルールを利用して描画する.ipynb  画像にキーポイントを描画する.ipynb
