[tool.poetry]
name = "anymotion-examples"
version = "0.1.0"
description = "AnyMotion Examples"
authors = ["Yusuke Kumihashi <y_kumiha@nttpc.co.jp>"]

[tool.poetry.dependencies]
python = "^3.6"
anymotion-sdk = "^1.0.0"
jupyterlab = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
