[tool.poetry]
name = "anymotion-examples"
version = "0.1.0"
description = "Example Code/Notebook to use AnyMotion"
authors = ["Yusuke Kumihashi <y_kumiha@nttpc.co.jp>"]

[tool.poetry.dependencies]
python = ">=3.6.2,<4"
anymotion-sdk = "^1.2.4"
jupyterlab = "^3.0.15"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
